# damacli

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: board.cc  board.h  board_state.h  color.h  command.h  config.cc  config.h  engine.h  game.cc  game.h  game_result.h  history_entry.h  input_source.h  main.cc  minimax_engine.cc  minimax_engine.h  move.h  parse_error.h  parser.cc  parser.h  piece_kind.h  square.h  stdin_input.cc  stdin_input.h  text_view.cc  text_view.h  tui_app.cc  tui_app.h  unicode_view.cc  unicode_view.h  view.h
src/public/: dama.cc  dama.h
tests/: board_test.cc  config_test.cc  parser_test.cc  test_helpers.h
